--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,12 @@ inputs:
   destination_key:
     description: 'SSH private key for destination repo.'
     required: true
+  git_user_name:
+    description: 'Git user name.'
+    required: true
+  git_user_email:
+    description: 'Git user email.'
+    required: true
 runs:
   using: 'docker'
   image: 'Dockerfile'
